src/test/ui/issues/issue-6XXXX/issue-60218.stderr
error[E0277]: the trait bound `&u32: Foo` is not satisfied
  --> $DIR/issue-60218.rs:18:27
   |
LL |     trigger_error(vec![], |x: &u32| x)
   |     -------------         ^^^^^^^^^^^ the trait `Foo` is not implemented for `&u32`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `trigger_error`
  --> $DIR/issue-60218.rs:13:72
   |
LL | pub fn trigger_error<I, F>(iterable: I, functor: F)
   |        ------------- required by a bound in this
...
LL | for<'t> <Map<<&'t I as IntoIterator>::IntoIter, F> as Iterator>::Item: Foo,
   |                                                                        ^^^ required by this bound in `trigger_error`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
